feat: add logstash

--- a/example.env
+++ b/example.env
@@ -16,3 +16,8 @@ LMSTUDIO_API_URL=""
 
 # Calcula AI API
 API_URL=""
+
+# Logstash
+LOGSTASH_URL="localhost:5000"
+LOGSTASH_TOKEN=""
+LOGSTASH_ENV="dev"
