--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ httpx-ws==0.7.2
 idna==3.10
 jmespath==1.0.1
 lmstudio==1.4.1
+logstash-formatter==0.5.17
 msgspec==0.19.0
 multidict==6.6.3
 pamqp==3.3.0
