--- a/example.env
+++ b/example.env
@@ -3,6 +3,13 @@
 ## Rabbitmq
 RABBITMQ_URL=""
 QUEUE_NAME=""
+WAIT_QUEUE_NAME=""
+PARKING_LOT_QUEUE_NAME=""
+WAIT_TTL_MS="30000"
+MAX_RETRIES="3"
+EXCHANGE_NAME="process-photo"
+WAIT_ROUTING_KEY="process-photo.wait"
+PARKING_LOT_ROUTING_KEY="process-photo.parkingLot"
 
 # Minio
 MINIO_ENDPOINT=""
