feat: increase timeout

--- a/example.env
+++ b/example.env
@@ -7,6 +7,7 @@ WAIT_QUEUE_NAME=""
 PARKING_LOT_QUEUE_NAME=""
 WAIT_TTL_MS="30000"
 MAX_RETRIES="3"
+PRE_FETCH_COUNT="1"
 EXCHANGE_NAME="process-photo"
 WAIT_ROUTING_KEY="process-photo.wait"
 PARKING_LOT_ROUTING_KEY="process-photo.parkingLot"
