feat: improve increase timeout

--- a/example.env
+++ b/example.env
@@ -21,6 +21,9 @@ MINIO_BUCKET=""
 # LM Studio
 LMSTUDIO_MODEL="gemma-3-27b-it"
 LMSTUDIO_API_URL=""
+LMSTUDIO_TIMEOUT_SECONDS="120"
+LMSTUDIO_MAX_RETRIES="2"
+LMSTUDIO_RETRY_BASE_DELAY="1.5"
 
 # Calcula AI API
 API_URL=""
